finished printing menus

--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -608,3 +608,5 @@ opening_hours: Otevírací doba
 # limiting delivery methods
 delivery_time_limit_from: Počáteční hodnota doby doručení
 delivery_time_limit_to: Konečná hodnota doby doručení 
+
+print_menus: Vybrat menu k tisku
