--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1,4 +1,201 @@
-cs:  #-- title
+cs:
+  active_record: 
+    record_not_found: "Záznam nenalezen!"
+  activerecord: 
+    errors: 
+      messages: 
+        accepted: "musí být potvrzeno"
+        blank: "je povinná položka"
+        confirmation: "nebylo potvrzeno"
+        empty: "nesmí být prázdné"
+        equal_to: "musí být rovno %{count}"
+        even: "musí být sudé číslo"
+        exclusion: "je vyhrazeno pro jiný účel"
+        greater_than: "musí být vyšší než %{count}"
+        greater_than_or_equal_to: "musí být vyšší nebo rovno %{count}"
+        inclusion: "není v seznamu povolenýchy hodnot"
+        invalid: "není platná hodnota"
+        less_than: "musí být nižší než %{count}"
+        less_than_or_equal_to: "musí být nižší nebo rovno %{count}"
+        not_a_number: "není číslo"
+        odd: "musí být liché číslo"
+        record_invalid: "Chyba validace: %{errors}"
+        taken: "již existuje"
+        too_long: "je příliš dlouhé (max. %{count} znaků)"
+        too_short: "je příliš krátké (min. %{count} znaků)"
+        wrong_length: "nemá správnu délku (očekává se %{count} znaků)"
+      template: 
+        body: "Následující pole obsahují chybně vyplněné údaje:"
+        header: 
+          one: "Při ukládání nastala chyba. Pokuste se jí opravit a proces zopakovat."
+          other: "Při ukládání došlo k %{count} chybám. Pokuste se je opravit a proces zopakovat."
+  date: 
+    _month_names: 
+      - ~
+      - leden
+      - únor
+      - březen
+      - duben
+      - květen
+      - červen
+      - červenec
+      - srpen
+      - září
+      - říjen
+      - listopad
+      - prosinec
+    abbr_day_names: 
+      - ne
+      - po
+      - út
+      - st
+      - čt
+      - pá
+      - so
+    abbr_month_names: 
+      - ~
+      - led
+      - úno
+      - bře
+      - dub
+      - kvě
+      - čvn
+      - čvc
+      - srp
+      - zár
+      - říj
+      - lis
+      - pro
+    day_names: 
+      - neděle
+      - pondělí
+      - úterý
+      - středa
+      - čtvrtek
+      - pátek
+      - sobota
+    formats: 
+      default: "%d. %m. %Y"
+      js: "%d.%m.%Y"
+      long: "%A %d. %B %Y"
+      long_with_day: "%A %d. %m. %Y"
+      short: "%d %b"
+      with_day: "%A %d.%m.%Y"
+      with_day_abbr: "%a %d.%m.%Y"
+    month_names: 
+      - ~
+      - ledna
+      - února
+      - března
+      - dubna
+      - května
+      - června
+      - července
+      - srpna
+      - září
+      - října
+      - listopadu
+      - prosince
+    order: 
+      - !ruby/symbol day
+      - !ruby/symbol month
+      - !ruby/symbol year
+    week_start: 1
+  datetime: 
+    distance_in_words: 
+      about_x_hours: 
+        one: "asi hodinou"
+        other: "asi %{count} hodinami"
+      about_x_months: 
+        one: "asi měsícem"
+        other: "asi %{count} měsíci"
+      about_x_years: 
+        one: "asi rokem"
+        other: "asi %{count} lety"
+      half_a_minute: "půl minutou"
+      less_than_x_minutes: 
+        one: "před necelou minutou"
+        other: "před ani ne %{count} minutami"
+      less_than_x_seconds: 
+        one: "asi před sekundou"
+        other: "asi před %{count} sekundami"
+      over_x_years: 
+        one: "více než před rokem"
+        other: "více než %{count} lety"
+      x_days: 
+        one: "24 hodinami"
+        other: "%{count} dny"
+      x_minutes: 
+        one: minutou
+        other: "%{count} minutami"
+      x_months: 
+        one: měsícem
+        other: "%{count} měsíci"
+      x_seconds: 
+        one: sekundou
+        other: "%{count} sekundami"
+    prompts: 
+      day: den
+      hour: hodina
+      minute: minuta
+      month: měsíc
+      second: sekunda
+      year: rok
+  number: 
+    currency: 
+      format: 
+        delimiter: "&nbsp;"
+        format: "%n %u"
+        precision: 2
+        separator: ","
+        unit: Kč
+    format: 
+      delimiter: " "
+      precision: 3
+      separator: ","
+    human: 
+      format: 
+        delimiter: "&nbsp;"
+        precision: 1
+      storage_units: 
+        format: "%n %u"
+        units: 
+          byte: 
+            one: B
+            other: B
+          gb: GB
+          kb: KB
+          mb: MB
+          tb: TB
+    percentage: 
+      format: 
+        delimiter: ""
+    precision: 
+      format: 
+        delimiter: ""
+  support: 
+    array: 
+      last_word_connector: " a "
+      two_words_connector: " a "
+      words_connector: ", "
+    range: 
+      connector: " až "
+  time: 
+    am: am
+    formats: 
+      date: 
+        default: "%d.&nbsp;%m.&nbsp;%Y"
+        long: "%d. %B %Y"
+        short: "%d %b"
+      default: "%d.&nbsp;%m.&nbsp;%Y %H:%M"
+      long: "%A %d. %B %Y %H:%M"
+      only_time: "%H:%M"
+      short: "%d.&nbsp;%m.&nbsp;%Y %H:%M"
+      very_short: "%H:%M"
+      with_day_abbr: "%a %d.%m.%Y %H:%M"
+    pm: pm
+  
+  #-- title
   title: Zelená kuchyně
   motto: Rozvoz vegetariánských jídel.
   #-- layout texts --
@@ -52,6 +249,7 @@ cs:  #-- title
   date_of_delivery: Datum doručení
   submit_order: odeslat objednávku
   order_submitted: objednávka přijata
+  orders_submitted: objednávky přijaty
   price_of_the_whole_menu: Cena za celé menu
   order_the_whole_menu: objednat celé menu
   create_order_for_user: Vytvořit uživateli objednávku
@@ -367,9 +565,9 @@ cs:  #-- title
   delimiter: '&nbsp;'
   decimal: ','
   currency: '{number}&nbsp;Kč'
-  date: '{day}.&nbsp;{month}.&nbsp;{year}'
+  #date: '{day}.&nbsp;{month}.&nbsp;{year}'
   date_with_weekday: '{weekday} {day}. {month}. {year}'
-  time: '{24hour}:{minute}'
+  #time: '{24hour}:{minute}'
   phone_number_template: '%n%n%n %n%n%n %n%n%n'
   country_code_template: '+(%cc)'
   1_day: 1 den
