--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -418,7 +418,7 @@ cs:
   #-- menu_links
   menu_menu: Menu
   menu_basket: Košík
-  menu_restaurant: Restaurace
+  menu_restaurant: Kulinářství
   menu_meals: Jídla
   menu_suppliers: Dodavadelé
   menu_ingredients: Přísady
